# NewCut

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cc  main.cpp  main_window.cc  main_window.h
base/containers/: ring_buffer.h
base/files/: file_path.cc  file_path.h  file_path_test.cc  file_util.cc  file_util.h
base/memory/: aligned_memory.cc  aligned_memory.h  atomic_ref_count.h  ref_counted.cc  ref_counted.h  ref_counted_test.cc
base/misc/: bits.h
base/strings/: string_piece.cc  string_piece.h  string_util.cc  string_util.h  string_util_helper.h  string_util_posix.h  string_util_test.cc  string_util_win.cc  string_util_win.h  utf_string_conversions.cc  utf_string_conversions.h  utf_string_conversions_test.cc
base/time/: time.cc  time.h
config/: build_config.h  user_config.h.in
engine/geometry/: flags.cc  flags.h
examples/diagram/: arrow.cc  diagram_item.cc  diagram_scene.h  main.cc  main_window.cc  main_window.h
media/audio/mac/: scoped_audio_unit.cc  scoped_audio_unit.h
media/base/: audio_buffer.cc  audio_buffer.h  audio_bus.cc  audio_bus.h  audio_bus_test.cc  audio_codec.cc  audio_codec.h  audio_parameters.cc  audio_parameters.h  audio_sample_types.h  audio_sample_types_test.cc  channel_layout.cc  channel_layout.h  container_names.cc  container_names.h  container_names_test.cc  decoder.cc  decoder.h  decoder_buffer.cc  decoder_buffer.h  limits.h  sample_format.cc  sample_format.h  test_data_util.cc  test_data_util.h  vector_math.cc  vector_math.h
media/ffmpeg/: ffmpeg_common.cc  ffmpeg_common.h  ffmpeg_deleters.cc  ffmpeg_deleters.h
media/filters/: audio_file_reader.cc  audio_file_reader.h  audio_file_reader_test.cc  ffmpeg_glue.cc  ffmpeg_glue.h  ffmpeg_glue_test.cc  memory_url_protocol.cc  memory_url_protocol.h  memory_url_protocol_test.cc
modules/audio_graph/: audio_node.cc  audio_node.h
newcut/: application_window.cc  application_window.h  main_window.cc  main_window.h  newcut_config.h.in
newcut/actions/: action_draw_line_free.cc  action_draw_line_free.h  action_file_new.cc  action_file_new.h  action_interface.cc  action_interface.h  preview_action_interface.cc  preview_action_interface.h  snapper.cc  snapper.h
newcut/engine/: color.cc  color.h  document.cc  document.h  entity.cc  entity.h  entity_container.cc  entity_container.h  enum_collect.cc  enum_collect.h  flags.cc  flags.h  layer.cc  layer.h  math.cc  math.h  pen.cc  pen.h  polyline.cc  polyline.h  quadratic.cc  quadratic.h  settings.cc  settings.h  undoable.cc  undoable.h  vector.cc  vector.h
newcut/gui/: action_factory.cc  action_factory.h  action_group_manager.cc  action_group_manager.h  action_handler.cc  action_handler.h  central_widget.cc  central_widget.h  graphic_view.cc  graphic_view.h  mdi_window.cc  mdi_window.h  widget_factory.cc  widget_factory.h
resources/: application.qrc
resources/html/path_stroke/: path_stroke.html
samples/diagram/: diagram_item.h  diagram_scene.cc  diagram_text_item.cc  main.cc  main_window.cc  main_window.h
scripts/: init_project.py  silence_remove.py  sync_deps.py
src/view/: diagram_scene.cc  diagram_scene.h  main_window.cc  main_window.h
view/: main_window.cc  main_window.h
view/params/: param_widget.cc  param_widget.h  params_graphics_scene.cc  params_graphics_scene.h  params_graphics_view.cc  params_graphics_view.h  params_widget.cc  params_widget.h
view/path_stroke/: arthur_frame.cc  arthur_frame.h  arthur_style.cc  arthur_style.h  path_stroke.html  path_stroke_controls.cc  path_stroke_controls.h  path_stroke_renderer.cc  path_stroke_renderer.h  path_stroke_widget.cc  path_stroke_widget.h
view/piano/: piano_graphics_scene.cc  piano_graphics_scene.h  piano_graphics_view.cc  piano_graphics_view.h
view/tracks/: track_graphics_scene.cc  track_graphics_scene.h  track_graphics_view.cc  track_graphics_view.h
